--- a/parallax-1/index.html
+++ b/parallax-1/index.html
@@ -85,12 +85,12 @@
 </style>
 
 <div class="container">
-    <img src="/images/bg.png" alt="" class="background">
+    <img src="image/bg.png" alt="" class="background">
 
-    <img src="/images/ground.png" alt="" class="ground">
+    <img src="image/ground.png" alt="" class="ground">
 
-    <img src="/images/dragon.png" alt="" class="dragon">
+    <img src="image/dragon.png" alt="" class="dragon">
     <span>Parallax effect</span>
 
-    <img src="/images/person.png" alt="" class="person">
+    <img src="image/person.png" alt="" class="person">
 </div>
